Add React UI components for beer order management and setup front-end testing
- Implement `OrderForm` component for creating and editing beer orders.
- Add `ShipmentDialog` for creating shipments with validation and API integration.
- Create `BeerOrderEditPage` for editing orders with data fetching and form submission.
- Introduce front-end Jest configuration for tests and new `OrderForm.test.tsx` with basic scenarios.
- Configure `ts-jest` and add setup file for testing utilities.
- Generate new OpenAPI TypeScript types and cancelable promise utilities.
- Update developer guide and prompts for front-end implementation.